# se-toolkit-lab-7

./: README.md  docker-compose.yml
bot/: Dockerfile  bot.py  j  pyproject.toml
bot/handlers/: commands.py
bot/services/: lms_client.py
