[project]
name = "se-toolkit-bot"
version = "0.2.0"
description = "Telegram bot for SE Toolkit Lab with backend integration"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bot", "config"]
packages = ["handlers", "services"]
